--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^12.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ga4": "^2.0.0",
     "react-icons": "^4.3.1",
     "three": "^0.139.2"
   },
